fixing text alignment to top, for text to left of youtube videos

--- a/src/App.css
+++ b/src/App.css
@@ -479,7 +479,11 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .myCommunities h2,
 .myCommunities h3 {
   text-align: left;
-  color: #0f4eac;
+  color: #ac0f8f;
+}
+
+.myCommunities p {
+  vertical-align: text-top;
 }
 
 .myCommunities .row {
